--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,26 @@
+:root{
+  /* #2B3A55,
+  #CE7777,
+  #E8C4C4,
+  #F2E5E5, */
+  --bgColor: #F2E5E5;
+  --accentColor: #2B3A55;
+  --accentTwoColor: #CE7777;
+}
+
 body{
   margin: 0;
+  background-color: var(--bgColor);
+  font-family: Futura Bk BT;
+}
+
+.add-thread-section{
+  height: 100%;
+  width: 10%;
+  /* background-color: orange; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav-section{
@@ -9,25 +30,32 @@ body{
   display: flex;
 }
 
-.add-thread-section, .left-spacer-section{
-  height: 100%;
-  width: 10%;
-  background-color: orange;
+.nav-form-section{
+  width: 75%;
+  height: 75%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--accentTwoColor);
+  border-radius: 1vh;
 }
 
 .search-section{
-  Display: flex;
-  content-justify: Center;
-  align-item: Center; 
   height: 100%;
-  width: 70%;
-  background-color: blue;
+  width: 60%;
+  /* background-color: blue; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .right-nav-section{
   height: 100%;
   width: 30%;
-  background-color: yellow;
+  /* background-color: yellow; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .content-section{
@@ -36,16 +64,46 @@ body{
   display: flex;
 }
 
-
-
 .left-thread-section{
   height: 100%;
   width: 70%;
-  background-color: lime;
+  /* background-color: lime; */
 }
 
 .right-thread-section{
   heigth: 100%;
   width: 30%;
-  background-color: red;
+  /* background-color: red; */
+}
+
+.button-style{
+  box-sizing: border-box;
+  padding: 1.5vh;
+  border-radius: 1vh;
+  border: none;
+  background-color: var(--accentColor);
+  font-family: Futura Bk BT;
+  font-size: 1.5vh;
+  color: white;
+}
+
+.button-style:hover{
+  background-color: var(--accentTwoColor);
+}
+
+
+.input-style{
+  width: 85%;
+  box-sizing: border-box;
+  padding: 1.5vh;
+  border-radius: 1vh;
+  border: none;
+  font-family: Futura Bk BT;
+  font-size: 1.5vh;
+  margin: 0.5vh;
+}
+
+.input-style:focus{
+  outline: none;
+  border: var(--accentColor) solid 2px;
 }
