--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,29 @@ body{
 .left-thread-section{
   height: 100%;
   width: 70%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   /* background-color: lime; */
+}
+
+.thread-display-section{
+  width: 70%;
+  margin-bottom: 2vh;
+  margin-top: 2vh;
+}
+
+.thread-display-section > *{
+  color: var(--accentColor);
+}
+
+.thread-head-a{
+  font-size: 2vh;
+  text-decoration: none;
+}
+
+.thread-head-a:hover{
+  color: var(--accentTwoColor);
 }
 
 .right-thread-section{
