--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
+  border-left: var(--accentColor) solid 1px;
 }
 
 .content-section{
@@ -128,4 +129,23 @@ body{
 .input-style:focus{
   outline: none;
   border: var(--accentColor) solid 2px;
+}
+
+.right-thread-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-left: var(--accentColor) solid 1px;
+}
+
+.trending-head-a{
+  text-align: center;
+  color: var(--accentColor);
+  font-size: 2vh;
+  text-decoration: none;
+  margin-top: 2vh;
+}
+
+.trending-head-a:hover{
+  color: var(--accentTwoColor);
 }
