--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ body{
   width: 100%;
   overflow: hidden;
   display: flex;
+  border-bottom: var(--accentColor) solid 1px;
 }
 
 .nav-form-section{
@@ -73,6 +74,54 @@ body{
   flex-direction: column;
   /* background-color: lime; */
 }
+
+.left-thread-section > h1{
+  text-align: center;
+  width: 60%;
+}
+
+.comment-form-section{
+  width: 70%;
+  /* border: solid black 1px; */
+}
+
+.comment-form-section > h2{
+  color: var(--accentColor);
+}
+
+.comment-form-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.comment-form-form > *{
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0.5vh;
+  padding: 1vh;
+  font-family: Futura Bk BT;
+  font-size: 1.5vh;
+  border-radius: 1vh;
+  border: 1px var(--accentColor) solid;
+}
+
+.comment-form-form > textarea{
+  resize: vertical;
+}
+
+.comment-form-form > button{
+  border: none;
+  background-color: var(--accentTwoColor);
+  color: var(--bgColor);
+  font-size: 2vh;
+}
+
+.comment-form-form > button:hover{
+  background-color: var(--accentColor);
+}
+
+
 
 .thread-display-section{
   width: 70%;
